--- a/views/default.html
+++ b/views/default.html
@@ -4,10 +4,20 @@
       <meta charset=utf8>
       <link rel="stylesheet" href="/assets/css/style.css">
     </head>
-    <body>
-      <header></header>
-      {{{content}}}
-      <footer></footer>
-    </body>
+    <div id="wrapper">
+      <body>
 
+        <header><h1>Keeping Organized with Your Personal To Do List</h1></header>
+
+              {{{content}}}
+
+
+        <footer>
+          <div id="footer">
+            <p>Created by Curtiss Melvin - ITC298 Final Project</p>
+          </div>
+        </footer>
+
+    </div> <!--- END OF WRAPPER DIV -->
+    </body>
   </html>
