--- a/views/default.html
+++ b/views/default.html
@@ -2,15 +2,18 @@
   <html>
     <head>
       <meta charset=utf8>
-      <link rel="stylesheet" href="/assets/css/style.css">
+      <link rel="stylesheet" href="/assets/style.css" type="text/css">
     </head>
     <div id="wrapper">
+        <div id="main">
+
       <body>
 
         <header><h1>Keeping Organized with Your Personal To Do List</h1></header>
 
               {{{content}}}
-
+        
+      </main> <!-- END OF MAIN DIV -->
 
         <footer>
           <div id="footer">
