--- a/views/form.html
+++ b/views/form.html
@@ -1,16 +1,14 @@
-<div id="header">
-<h1>Keeping Organized with Your Personal To Do List</h1>
-</div>
+
 
 
 <form action="/list" method="POST">
-  <legend>Items that must be completed on your To Do List:</legend>
+  <legend>Items that must be completed on your To Do List: <style="margin-top: 75px;"></legend>
   <input name="description" placeholder="Description"
   <br />
   <input name="date" placeholder="Date">
   <br />
   <p>Update your Status:</p>
-  <select name="status" placeholder="Status" style="margin-bottom: 40px;">
+  <select name="status" placeholder="Status" style="margin-bottom: 50px;">
     <option value="disabled" disabled selected>Please Select Status</option>
     <option value="complete">Complete</optin>
     <option value="pending">Pending</option>
@@ -19,7 +17,3 @@
   <input type="submit" value="Submit your To Do List">
 
 </form>
-
-<div id="footer">
-  <p>Created by Curtiss Melvin - ITC298 Final Project</p>
-</div>
