--- a/views/form.html
+++ b/views/form.html
@@ -1,8 +1,8 @@
 
 
-
-<form action="/list" method="POST">
-  <legend>Items that must be completed on your To Do List: <style="margin-top: 75px;"></legend>
+<div id="form">
+<form action="/list" method="POST" style="padding-left: 75px;">
+  <legend>Items that must be completed on your To Do List: </legend>
   <input name="description" placeholder="Description"
   <br />
   <input name="date" placeholder="Date">
@@ -17,3 +17,4 @@
   <input type="submit" value="Submit your To Do List">
 
 </form>
+</div>
