--- a/views/default.html
+++ b/views/default.html
@@ -5,14 +5,15 @@
       <link rel="stylesheet" href="/assets/style.css" type="text/css">
     </head>
     <div id="wrapper">
-        <div id="main">
+
 
       <body>
+        <div id="main">
 
-        <header><h1>Keeping Organized with Your Personal To Do List</h1></header>
+        <header><h1>Personal To Do List</h1></header>
 
               {{{content}}}
-        
+
       </main> <!-- END OF MAIN DIV -->
 
         <footer>
