--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
   </div>
 
       <ul class="list">
-          <h2>Enter your To Do Items Below</h2>
+          <h2>This has been added to your scheduled</h2>
               {{#reminders}}
                 <li>
                   {{Description}}<br />
